2006-01-27  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (lambda_extend): Fixed misbehaving lambda_extend for
	functions with variable number of srguments called without any
	arguments 
	(dfsch_raise): Thread safe exception handling
	(dfsch_make_symbol): Thread safe symbols

	* src/native.c (native_form_defined_p): Fixed defined? to work
	with new wxception system

	* src/hash.c (GET_HASH): Recognize nils as not being valid hash
	table objects

	* src/dfsch.c (dfsch_unintern): uninterning of symbols

	* src/native.c: Removed duplicated code

	* src/number.c: Moved number native functions to number.c

	* src/native.c: escape argument to native functions
	(native_eval): eval, apply and eval-proc are properly tail-recursive
	(native_form_let_seq): Properly tail recursive
	(native_form_letrec): Properly tail recursive
	(native_form_let): Properly tail recursive

	* src/load.c: escape argument to native functions

	* src/promise.c: escape argument to native functions

	* src/hash.c: escape argument to native functions

	* src/dfsch.c (dfsch_apply_tr): Support for tail recursive native
	functions.

	* scm/test.scm (degeneratedList): Test for special case of quasiquote

	* src/dfsch.c (dfsch_append): append accepts empty lists as
	arguments.

	* src/native.c (native_gensym): gensym function

	* src/dfsch.c (dfsch_gensym): gensyms (unique symbols)

2006-01-26  Ales Hakl  <ales at hakl dot net>

	* configure.ac: Do not add -lreadline to LIBS

	* src/strings.c: Fixed some warnings

	* src/promise.c: Fixed some warnings

	* src/hash.c: Fixed some warnings

	* src/dfsch.c: Fixed some warnings
	All warnings fixed

	* scm/test.scm (v): Test for vector manipulation

2006-01-25  Ales Hakl  <ales at hakl dot net>

	* src/native.c (dfsch_native_register): assq, assv in scheme

	* src/dfsch.c (dfsch_assq, dfsch_assv): Other variants of assoc 
	(dfsch_assv): Fixed

	* src/strings.c (string_equal_p): Fixed string comparison function
